--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "dva": "^1.2.1",
     "firebase": "^2.4.2",
     "react": "^15.4.0",
-    "react-dom": "^15.4.0"
+    "react-dom": "^15.4.0",
+    "url": "^0.11.0",
+    "url-parse": "^1.1.9"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
